--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,28 @@
 .page {
   min-height: 80vh;
 }
+
+.box {
+  width: 50%;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  padding: 20px;
+  background-color: white;
+}
+
+
+.form-container {
+  height: 90vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-image: linear-gradient(0deg, rgba(227, 202, 254, 0.612) 0%, white 20%, white 80%, rgba(220, 205, 236, 0.612) 100%);
+}
+
+.form-container input {
+  border-bottom: 1px solid gray;
+  border-radius: 0px;
+}
+
+.batul p {
+  display: block;
+}
